--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <title>BIODATA DIRI</title>
 </head>
 <body>
