--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>BIODATA DIRI</title>
- <link rel="stylesheet" href="css/style.css" />
+ <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <h1 align="center">BIODATA DIRI</h1>
