--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>BIODATA DIRI</title>
+<title>Biodata Diri</title>
  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
