--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+<link rel="stylesheet" href="style.css" >
+    <title>Hello! | Fadhlan Rizqi Valen</title>
+  </head>
+  <body id="home">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Valen</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Project</a>
+            </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="jumbotron text-center">
+        <img src="Valen ganteng.jpeg" alt="Fadhlan Rizqi Valen" width="160" class="rounded-circle img-thumbnail"/>
+        <h1 class="display-4">Fadhlan Rizqi Valen</h1>
+        <p class="lead"> Student | Photographer</p>
+    </section>
+</section>
+<section id="about">
+    <div class="container">
+        <div class="row ">
+            <div class="col">
+                <h2> _______________________________________________________________________________</h2>
+                
+            </div>
+        </div>
+        <div class="row text-center">
+          <div class="col">
+           <h2> About Me!</h2>
+          </div>
+          <div class="row">
+              <div class="col">
+                  <p> Nama saya Fadhlan Rizqi Valen, namun terbiasa dipanggil Valen. Saya lahir di Bogor pada Tangal 03 Februari 2004 dan Hobi saya adalah Editting dan Fotografi. Saya pun masih bersekolah di SMK-SMAK Bogor dengan jurusan Analis Kimia.  </p>
+              </div>
+          </div>
+<div class="row">
+    <div class="col">
+        <p> Ada beberapa hal menarik tentang saya, saya adalah orang yang pelupa.Terutama dalam hal menaruh barang saya seringkali lupa dengan barang yang saya taruh seperti Handphone ataupun Kunci Motor, tapi tenang aja ketemu lagi kok barangnya, saya pun terkadang cukup sulit mengerti tentang hal yang sedang diperbincangkan sehingga perlu penjelasan kedua kalinya atau perlu contoh sebagai gambaran.Disamping hal itu saya juga orang yang humoris, terasa menyenangkan sekali membuat orang tertawa melihat tingkah konyol atau bodoh yang saya lakukan.</p>
+    </div>
+</div>
+          
+      </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  </body>
+</html>
 
